# openswitch-ops-switchd-container-plugin

./: .gitreview  AUTHORS  CMakeLists.txt  DESIGN.md  README.md  groups  my.diff  netdev-sim.c  netdev-sim.h  ofproto-sim-provider.c  ofproto-sim-provider.h  project.config  reviewers.config  sim-plugins.c
include/: netdev-sim.h  netdev-vport-sim.h  ofproto-sim-provider.h  ops-classifier-sim.h  qos.h  sim-copp-plugin.h  sim-stp.h
ops-tests/: testsuite_gate@component.conf  testsuite_gate@feature.conf
ops-tests/component/: switchd-container-plugin_test.md  test_container_config_check.py  test_container_config_check_trunk.py  test_intervlan_direct_connected.py  test_switchd_container_ct_changing_vlan_config.py  test_switchd_container_ct_if_stats.py  test_switchd_container_ct_intervlan.py  test_switchd_container_ct_lag_access.py  test_switchd_container_ct_lag_trunk.py  test_switchd_container_ct_sflow.py  test_switchd_container_ct_switchd_restartability.py  test_switchd_container_ct_vlan_access.py  test_switchd_container_ct_vlan_trunk.py  test_switchd_ct_vlan_access_check_config.py  test_switchd_ct_vlan_access_invalid_tags.py  test_switchd_ct_vlan_access_vlan_missing.py  test_switchd_ct_vlan_access_vlan_normal.py  test_switchd_ct_vlan_trunk_check_config.py  test_switchd_ct_vlan_trunk_invalid_trunks.py  test_switchd_ct_vlan_trunk_vlan_missing.py  test_switchd_ct_vlan_trunk_vlan_normal.py
ops-tests/component/test_switchd_container_ct_changing_vlan_config/: test_switchd_container_ct_changing_vlan_config.py
ops-tests/component/test_switchd_container_ct_if_stats/: test_switchd_container_ct_if_stats.py
ops-tests/component/test_switchd_container_ct_intervlan/: test_intervlan_direct_connected.py
ops-tests/component/test_switchd_container_ct_lag_access/: test_container_config_check.py
ops-tests/component/test_switchd_container_ct_lag_trunk/: test_container_config_check_trunk.py
ops-tests/component/test_switchd_container_ct_switchd_restartability/: test_switchd_container_ct_switchd_restartability.py
ops-tests/component/test_switchd_container_ct_vlan_access/: test_switchd_ct_vlan_access_check_config.py  (+3 more)
src/: netdev-sim.c  netdev-vport-sim.c  ofproto-sim-provider.c  ops-classifier-sim.c  qos.c  sim-copp-plugin.c  sim-plugins.c  sim-stp-plugin.c
test/: test_ovs_sim_ct_intervlan.py  test_ovs_sim_ct_lag_access.py  test_ovs_sim_ct_lag_trunk.py  test_ovs_sim_ct_vlan_access.py  test_ovs_sim_ct_vlan_trunk.py  test_vlan_access.py  test_vlan_trunk.py
tests/: switchd-container-plugin_test.md  test_ovs_sim_ct_lag_trunk.py  test_ovs_sim_ct_vlan_trunk.py  test_switchd_container_ct_changing_vlan_config.py  test_switchd_container_ct_if_stats.py  test_switchd_container_ct_intervlan.py  test_switchd_container_ct_lag_access.py  test_switchd_container_ct_lag_ping.py  test_switchd_container_ct_lag_trunk.py  test_switchd_container_ct_switchd_restartability.py  test_switchd_container_ct_vlan_access.py  test_switchd_container_ct_vlan_trunk.py  test_switchd_container_ct_vxlan.py
(+4 files in other folders)
